@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          Hardcode features for perl < 5.15.7
 
 0.008     2014-07-05 13:58:28+02:00 Europe/Amsterdam
           Give better perl version formatting
